--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "signaling-server.js",
+  "name": "video-call-server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node signaling-server.js"
+    "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   }
